Skip rows with errors in import
Allow an import operation to complete even when several records have failed to be imported.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -202,6 +202,9 @@ ExportErrorCode.VALIDATION_RULE_FLOW_LESS = <{flow}lt/min - Rule #3 "Flow less t
 ExportErrorCode.VALIDATION_RULE_VOLUME_PERCENTILE = <{percent}% volume - Rule #4 "Removed {percent}% of showers with the least volume"
 ExportErrorCode.VALIDATION_RULE_TOO_MANY_RECORDS_REMOVED = <{percent}% showers - More than {percent}% of showers has been removed. Total [{total}]. Removed [{removed}]
 
+# Data Import
+ImportErrorCode.TOO_MANY_ERRORS = Too many errors found. [{errors}] errors found. [{total}] rows processed.
+
 # Mail errors
 MailErrorCode.LOG_FAILED = Failed to log mail send operation.
 MailErrorCode.SENT_FAILED = Failed to send mail.
